# Generated by Django 6.0 on 2025-12-08 00:15
from django.db import migrations


BADGES = [
    ("Pierwszy Kurs", "Ukończenie pierwszego kursu", "badges/first_course.png"),
    ("Quizowy As", "Zdobycie 100% w dowolnym quizie", "badges/quiz_master.png"),
    ("Siedem Dni Ciągiem", "7-dniowy streak aktywności", "badges/streak_7.png"),
    ("Miesiąc Regularności", "30-dniowy streak aktywności", "badges/streak_30.png"),
    ("Sprinter", "Ukończenie lekcji w mniej niż 10 minut", "badges/sprinter.png"),
    ("Pomocna Dłoń", "Dodanie pierwszej odpowiedzi na forum", "badges/helping_hand.png"),
    ("Kolekcjoner", "Zdobycie 5 odznak", "badges/collector.png"),
    ("Wierny Użytkownik", "Logowanie przez 14 kolejnych dni", "badges/loyal_user.png"),
]


def seed_badges(apps, schema_editor):
    Badge = apps.get_model("users", "Badge")
    for name, description, image_path in BADGES:
        Badge.objects.get_or_create(
            name=name,
            defaults={
                "description": description,
                "image_url": "",
                "image": image_path,
            },
        )


def unseed_badges(apps, schema_editor):
    Badge = apps.get_model("users", "Badge")
    names = [name for name, _, _ in BADGES]
    Badge.objects.filter(name__in=names).delete()


class Migration(migrations.Migration):

    dependencies = [
        ("users", "0003_badge_image_optional"),
    ]

    operations = [
        migrations.RunPython(seed_badges, reverse_code=unseed_badges),
    ]
